--- a/www/Changelog.html
+++ b/www/Changelog.html
@@ -23,6 +23,9 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-08-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+  * Fix formatting in the *.mgk files so that they are XML conformant
+
 2002-08-30  Glenn Randers-Pehrson &lt;randeg@alum.rpi.edu&gt;
   * QuantizeImage() did not always produce proper bilevel images.
 
