Revised description of -deconstruct option.

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -1149,6 +1149,11 @@ width=15><b><font face="Helvetica, Arial"
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>break down an image sequence into constituent parts</td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
+This option compares each image with the next in a sequence and
+returns the maximum bounding region of any pixel differences it discovers.
+This method can undo a coalesced sequence returned by the
+<strong>-coalesce</strong> option.</font></td></tr></table>
+<table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
 The sequence of images
 is terminated by the appearance of any option.
 If the <strong>-deconstruct</strong>
