Revised description of Deconstruct method and -deconstruct option.

--- a/www/ImageMagick.html
+++ b/www/ImageMagick.html
@@ -1152,7 +1152,8 @@ width=15><b><font face="Helvetica, Arial"
 This option compares each image with the next in a sequence and
 returns the maximum bounding region of any pixel differences it discovers.
 This method can undo a coalesced sequence returned by the
-<strong>-coalesce</strong> option.</font></td></tr></table>
+<strong>-coalesce</strong> option, and is useful for removing redundant information
+from a GIF or MNG animation.</font></td></tr></table>
 <table width="90%" border="0" cellspacing="0"             cellpadding="8">             <tr><td width="6%"><br></td><td><font size="-1">
 The sequence of images
 is terminated by the appearance of any option.
